# memory-efficient-transformer-training-techniques

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_all_experiments.sh
models/: transformer_model.py
results/: comparison_report.txt  forum_forum_poradnikogrodniczy_pl_corpus_baseline_bs128_memory.json  forum_forum_poradnikogrodniczy_pl_corpus_baseline_bs128_metrics.json  forum_forum_poradnikogrodniczy_pl_corpus_baseline_bs32_memory.json  forum_forum_poradnikogrodniczy_pl_corpus_baseline_bs32_metrics.json  forum_forum_poradnikogrodniczy_pl_corpus_baseline_bs64_memory.json  forum_forum_poradnikogrodniczy_pl_corpus_baseline_bs64_metrics.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_bs128_memory.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_bs128_metrics.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_bs32_memory.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_bs32_metrics.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_bs64_memory.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_bs64_metrics.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_flash_bs128_memory.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_flash_bs128_metrics.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_flash_bs32_memory.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_flash_bs32_metrics.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_flash_bs64_memory.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_flash_bs64_metrics.json  forum_forum_poradnikogrodniczy_pl_corpus_bf16_window16_bs128_memory.json  (+17 more)
scripts/: compare_results.py  train.py  (+3 more)
(+6 files in other folders)
