[project]
name = "lo-lab4"
version = "0.1.0"
description = "Memory-Efficient Transformer Training Techniques (Lab 4)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "speakleash>=0.3.51",
    "tokenizers>=0.22.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
